A full-fledged Java project for working with the online order database with authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,22 @@ spring.application.name=univer03
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydata
 spring.datasource.username=postgres
 spring.datasource.password=secret
-#logging.level.org.springframework.jdbc.core=TRACE
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.jdbc.core=TRACE
+logging.level.ua.cn.stu.univer03.debt=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# Відключаємо Whitelabel Error Page
+server.error.whitelabel.enabled=false
+
+# Налаштувати шлях до кастомних сторінок помилок
+server.error.path=/error
+server.error.page-not-found=error-404.html
+server.error.access-denied=error-403.html
+server.error.unauthorized=error-401.html
+
+# Налаштування для Thymeleaf (якщо використовується)
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
