--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=univer03
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydata
-spring.datasource.username=postgres
-spring.datasource.password=secret
+spring.datasource.username=${DB_LOGIN}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.jdbc.core=TRACE
